<resources>
    <string name="app_name">Mascota</string>
    <string name="ID">User ID</string>
    <string name="pass">Password</string>
    <string name="iniciar_sesion">Login</string>
    <string name="crear_cuenta">Create Account</string>
    <string name="usuario_existe">User already exists</string>
    <!-- Strings used for fragments for navigation -->

    <string name="cerrar_sesion">Logout</string>
    <string name="faltan_datos">Missing data</string>
    <string name="mascotas">Pets</string>
    <string name="nombre_mascota">Pet name</string>
    <string name="especie">Species</string>
    <string name="raza">Breed</string>
    <string name="fecha_nacimiento">Day of birth</string>
    <string name="eliminar">Delete</string>
    <string name="cancelar">Cancel</string>
    <string name="aceptar">Accept</string>
    <string name="error_red">Network error</string>
    <string name="advertencia_eliminar_mascota">Delete this pet?</string>
    <string name="error_eliminar">The pet could not be deleted</string>
    <string name="agregar_mascota">Add pet</string>
    <string name="editar_mascota">Edit pet</string>
    <string name="agregar_alimento">Add food or drinks</string>
    <string name="agregar_horario">Add schedule</string>
    <string name="alimentos_bebidas">Food or drink</string>
    <string name="mac">Device MAC Key</string>
    <string name="editar_alimento">Edit food or drink</string>
    <string name="datos_incorrectos">Wrong data</string>
    <string name="error_guardar">Saving error</string>
    <string name="hora">Hour</string>
    <string name="gramos">Grams</string>
    <string name="para">for</string>
    <string name="editar_horario">Edit schedule</string>
    <string name="de">of</string>
    <string name="advertencia_eliminar_horario">Delete this schedule?</string>


</resources>