<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingTop="32dp"
    android:paddingEnd="32dp"
    android:paddingBottom="16dp">

    <EditText
        android:id="@+id/etNombreMascota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nombre_mascota"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEspecie"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/especie"
        app:layout_constraintStart_toStartOf="@+id/spnEspecie"
        app:layout_constraintTop_toBottomOf="@+id/etNombreMascota" />
    <Spinner
        android:id="@+id/spnEspecie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/etNombreMascota"
        app:layout_constraintStart_toStartOf="@+id/etNombreMascota"
        app:layout_constraintTop_toBottomOf="@+id/textViewEspecie" />

    <TextView
        android:id="@+id/textViewRaza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/raza"
        app:layout_constraintStart_toStartOf="@+id/spnRaza"
        app:layout_constraintTop_toBottomOf="@+id/spnEspecie" />

    <Spinner
        android:id="@+id/spnRaza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/spnEspecie"
        app:layout_constraintStart_toStartOf="@+id/spnEspecie"
        app:layout_constraintTop_toBottomOf="@+id/textViewRaza">

    </Spinner>




    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fecha_nacimiento"
        app:layout_constraintStart_toStartOf="@+id/etHora"
        app:layout_constraintTop_toBottomOf="@+id/spnRaza" />

    <EditText
        android:id="@+id/etHora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/spnRaza"
        app:layout_constraintStart_toStartOf="@+id/spnRaza"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/aceptar"
        app:layout_constraintEnd_toEndOf="@+id/etHora"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/etHora" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cancelar"
        android:theme="@style/Boton.Gris"
        app:layout_constraintStart_toStartOf="@+id/etHora"
        app:layout_constraintTop_toBottomOf="@+id/etHora" />

</androidx.constraintlayout.widget.ConstraintLayout>