<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingTop="32dp"
    android:paddingEnd="32dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/textViewe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hora"
        app:layout_constraintStart_toStartOf="@+id/etHora"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etHora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewe" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gramos"
        app:layout_constraintTop_toBottomOf="@id/etHora"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/etGramos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />



    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/aceptar"
        app:layout_constraintEnd_toEndOf="@+id/etGramos"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/etGramos" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cancelar"
        android:theme="@style/Boton.Gris"
        app:layout_constraintStart_toStartOf="@+id/etGramos"
        app:layout_constraintTop_toBottomOf="@+id/etGramos" />

</androidx.constraintlayout.widget.ConstraintLayout>